--- a/src/components/Work/WorkMobile.scss
+++ b/src/components/Work/WorkMobile.scss
@@ -33,10 +33,11 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        p {
+        
+        .introTxt {
             font-size: 1.5rem;
             font-weight: bold;
-            text-align: left;
+            text-align: center;
         }
 
         .projects {
